styles/Home.module.css
.container {
  padding: 0 2rem;
}

.main {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.title a:hover,
.title a:focus,
.title a:active {
  text-decoration: underline;
}


.check_out{
  display: flex;
  align-items: center;
  cursor: pointer;
}

.check_out_text{
  font-size: 24px;
  font-weight: 300;

}

.bouncy_arrow{
  margin-left: 10px;
  font-size: 28px;
  font-weight: 300;
  animation: bounce 1s infinite;
}

.work_heading{
  font-size: 24px;
  font-weight: 300;
  margin-bottom: 0.5rem;
}

.intro{
  display: flex;
  flex-direction: column;
  padding: 4.7rem 0 3rem 0;
}

.my_name{
  font-size: 96px;
  font-weight: 700;
  margin: 0;
  padding: 0;
  background: rgb(244, 168, 161);
  background: linear-gradient(90deg, rgba(244, 168, 161, 1) 0%, rgba(143, 161, 233, 1) 12%, rgba(116, 179, 245, 1) 25%, rgba(92, 216, 243, 1) 41%, rgba(74, 173, 238, 1) 56%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.hello{
  font-size: 18px;
  font-weight: 300;
}


.grid {
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  flex-wrap: wrap;
  max-width: 1100px;
}

.card {
  text-align: left;
  text-decoration: none;
  border-radius: 4px;
  width: auto;
  max-width: calc(100% * 0.48);
  cursor: pointer;
  margin-bottom: 2rem;
}

.project_title{
  font-size: 24px;
  font-weight: 300;
}

.project_description{
  font-size: 16px;
  font-weight: 300;
}

.project_tags{
  font-size: 14px;
  font-weight: 300;
  color: var(--color-blue);
}

.card:hover,
.card:focus,
.card:active {
  padding: 0.5rem;
  -webkit-box-shadow: 0px 0px 5px 2px rgba(154, 154, 154, 0.54);
    box-shadow: 0px 0px 5px 2px rgba(154, 154, 154, 0.54);
    transform: scale(1.01);
    transition: 200ms ease-in;
}

.logo {
  height: 1em;
  margin-left: 0.5rem;
}

.go_top_button{
  position: fixed;
  bottom: 20px;
  width: 50px;
  text-align: center;
  right: 40px;
  background-color: var(--color-text);
  color: var(--color-background);
  font-size: 26px;
  padding: 0.4rem;
  border-radius: 6px;
  cursor: pointer;
}

.filter_options{
  display: flex;
  /*flex-wrap: wrap;*/
  overflow-y: scroll;
  align-items: center;
  padding: 0 2rem 2rem 2rem;
  width: 100vw !important;
  transform: translateX(-26px);
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.filter_options::-webkit-scrollbar{
  display: none;
}
.filter{
  z-index: 1000;
  cursor: pointer;
  padding: 0.4rem 1rem 0.4rem 1rem;
  margin-right: 0.4rem;
  border: 1px solid var(--color-gray);
  border-radius: 50px;
  color: rgba(26, 26, 26, 0.5);
  white-space: nowrap;
  color: var(--color-gray);
  font-size: 14px;
  -webkit-tap-highlight-color: transparent;
}
.filter_active{
  z-index: 1000;
  cursor: pointer;
  padding: 0.4rem 1.2rem 0.4rem 1.2rem;
  margin-right: 0.4rem;
  border: 2px solid var(--color-text);
  border-radius: 50px;
  white-space: nowrap;
  color: var(--color-text);
  font-size: 14px;
  -webkit-tap-highlight-color: transparent;
}

.my_project_section{
  width: 100%;
  max-width: 1100px;
  height: 100vh;
}

.fun_filter{
  display: grid;
  grid-template: 1fr / 1fr;
  place-items: center;
  background-color: aqua ;
}

.fun_filter > * {
  grid-column: 1 / 1;
  grid-row: 1 / 1;
}

.lottie_container{
  height: 50px;
  width: 200px;
}
@keyframes bounce {


  0% {
    transform: translateY(0px);
  }

  50% {
    transform: translateY(10px);
  }

  100% {
    transform: translateY(0px);
  }
}

@media (max-width: 700px) {
  .container{
    overflow-x: hidden;
  }

  .main{
    padding: 0;
  }


  .card {
    width: auto;
    max-width: 100%;
    height: auto;
  }

  .my_name{
    font-size: 72px;
  }

}

